_sass/main.scss
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');

$brand: #6D7CED;
$light-gray: #BFC3C5;
$lighter-gray: rgb(232, 236, 238);
$black: #171C28;


html {
  --bg: #fff;
  --bg-secondary: #fcfcfc;
  --highlight: #6D7CED;
  --text: #171C28;
  margin: 0;
  padding: 0;
  height: 100%;
  background: var(--bg);
}


html[data-theme='dark'] {
  --bg: #171C28;
  --bg-secondary: #444;
  --hightlight: #6D7CED;
  --text: #fff;
  margin: 0;
  padding: 0;
  height: 100%;
}

html.transition,
html.transition *,
html.transition *:before,
html.transition *:after {
    transition: all 650ms !important;
    transition-delay: 0 !important;
}


* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
body {
  height: 99vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: normal;
  font-style: normal;
  font-family: "Open Sans", sans-serif;
  color: $black;
  padding: 20px;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-text-size-adjust: 100%;
  @media (min-width: 992px) {
    padding: 35px 50px;
  }
}
h1,
h2,
h3,
h4,
h5,
h6 {
  margin-bottom: 1rem;
  line-height: 1.60;
  color: $black;
  letter-spacing: 0.04em;
  font-weight: 400;
}
h1 {
  font-size: 2rem;
}

h2 {
  margin-top: 1rem;
  font-size: 1.5rem;
}

h3 {
  margin-top: 1.5rem;
  font-size: 1.25rem;
}

h4,
h5,
h6 {
  margin-top: 1.1rem;
  font-size: 1.1rem;
}
img {
  max-width: 100%;
  &.me {
    max-width: 100px;
    border-radius: 50%;
  }
}

#header {
  margin-top: 80px;
}

strong {
  font-weight: 700;
}

.logo {
  border-bottom: 0;
  &:hover {
    border-bottom: 0;
  }
}

.flex-center {
  display: flex;
  align-items: center;
}

.m-0 {
  margin: 0;
}

.mt-1 {
  margin-top: 5px;
  margin-left: 5px;
}
.text-bold {
  font-weight: 700;
}

.nav-links {
  margin: 30px 0;
  p {
    display: inline-block;
    margin: 0 10px;
  }
  a {
    margin: 0 10px;
    padding: 0 5px;
  }
}
mark {
  background: #fffc76;
  padding: 0 5px;
}
blockquote {
  border-left: 5px solid #ccc;
  margin: 40px 0;
  padding: 5px 30px;
  background: #eee;
}

iframe {
  margin: 45px 0 !important;
}
ul,
ol {
  margin: 10px 0;
  padding-left: 25px;
  li {
    word-wrap: break-word;
    margin: 5px 0;
  }
  img {
    margin: 40px 0;
    border-radius: 5px;
  }
}
sup {
  vertical-align: top;
  position: relative;
  top: -0.5em;
  margin-left: 1px;
}
time {
  color: #555;
}
code,
pre,
.code,
.footnotes {
  font-family: Consolas, monaco, monospace;
}
code {
  color: #f14e32;
  background: #eee;
  padding: 2px 6px;
  font-size: 13px;
}
pre {
  display: block;
  margin-top: 0;
  margin-bottom: 1rem;
  font-size: 0.8rem;
  line-height: 1.4;
  white-space: pre;
  overflow-x: auto;
  background-color: #f9f9f9;
  border: 1px solid #ddd;
  padding: 1rem;
  code {
    font-size: 100%;
    color: inherit;
    background-color: transparent;
    padding: 0;
  }
}
table {
  width: 100%;
  table-layout: fixed;
  margin: 45px 0;
  thead {
    background: #f2f2f2;
  }
  th {
    text-align: left;
    padding: 8px 10px;
    border-bottom: 15px solid #fff;
  }
  td {
    padding: 4px 0;
  }
}
iframe {
  width: 100%;
}

.divider {
  background: #ddd;
  background: -webkit-gradient(linear,left top,right top,from(rgba(255,255,255,0)),color-stop(#ccc),to(rgba(255,255,255,0)));
  background: -webkit-linear-gradient(left,rgba(255,255,255,0),#ccc,rgba(255,255,255,0));
  background: linear-gradient(to right,rgba(255,255,255,0),#ccc,rgba(255,255,255,0));
  height: 1px;
  margin: 2em 0;
}

article {
  max-width: 660px;
  margin: 0 auto;
  h1.title {
    line-height: 1.4em;
    text-align: center;
    font-size: 1.4em;
  }
  .center {
    text-align: center;
    margin: 0 auto;
  }
  hr {
    border: 0;
    background: 1px solid $light-gray;
    margin: 30px 0;
  }
  p {
    font-size: 15px;
    line-height: 1.9em;
    word-wrap: break-word;
  }
  .footnote {
    border: 0;
    background-color: #0087BE;
    color: #fff;
    padding-left: 2px;
    padding-right: 2px;
  }
  .footnotes {
    margin: 50px auto;
    display: block;
    font-size: 0.8em;
    color: #666;
    p {
      line-height: 1rem;
      font-weight: normal;
    }
    ol {
      margin: 0;
      padding-left: 15px;
      li {
        font-weight: bold;
      }
    }
    .reversefootnote {
      border: 0;
      color: #0087BE;
    }
  }
  a:hover {
    color: #369;
    border-color: #369;
  }
}
.back {
  text-align: center;
  a {
    text-decoration: none;
    margin: 40px auto 0;
    display: inline-block;
    padding: 10px;
    border: 0;
    &:before {
      content: "<<";
      margin-right: 5px;
      color: #000;
    }
  }
}

.reading-time {
  color: $light-gray;
}
.block {
  display: block;
}
.page-navigation,
.footer {
  text-align: center;
  max-width: 500px;
  margin: 0 auto;
  font-size: 0.8rem;
}
.page-navigation {
  margin: 50px auto 0 auto;
  a {
    display: inline-block;
    text-decoration: none;
    border-bottom: none;
    margin: 0 5px;
  }
  span {
    display: inline-block;
  }
}
.footer {
  margin-top: 50px;
  color: #777;
  a {
    border: none;
    font-weight: bold;
  }
}

section {
  max-width: 1000px;
  margin: 0 auto 60px auto;
  .mini-section {
    max-width: 700px;
  }
  ul {
    list-style: none;
    margin: 0;
    padding: 0;
    li {
      margin: 20px 0;
      .title {
        max-width: 100%;
        //overflow: hidden !important;
        //text-overflow: ellipsis !important;
        //white-space: nowrap !important;
        word-wrap: normal !important;
      }
      a {
        text-decoration: none;
        border: 0;
        color: #000;
        box-sizing: border-box;
      }
      .post-date {
        float: right;
        margin: 0 0 0 20px;
      }
      span {
        display: inline-block;
        color: $light-gray;
        letter-spacing: 1px;
        text-transform: none;
      }
      @media (min-width: 992px) {a {
          border-bottom: 2px solid transparent;
          &:hover {
            border-color: #6D7CED;
            color: #6D7CED;
          }
        }
      }
    }
  }
}

#mc_embed_signup { 
  border: none;
  text-align: center;
  width: 100%; 
  background: $lighter-gray;
  padding: 20px 0;
  .sub {
    font-size: 1em;
    font-weight: 600;
    margin: 0 60px 10px;
  }
  p {
    margin-bottom: 0;
    font-size: 0.7em;
  }
} /* Signup form container */

.mc-field-group {
  display: inline-block;
  width: auto;
} /* positions input field horizontally */

#mce-EMAIL {
  font-size: 1em;
  width: 400px;
  border: 2px solid #FFF;
  color: $black; 
  background-color: #fff;
  padding: .7em 1em .7em 1em;
  display: inline-block;
  margin: 0;
  transition: all 0.3s;
  &:focus {
    border: 2px solid $brand;
  }
} /* Input Styles */

.clear { 
  display: inline-block;
} /* positions button horizontally in line with input */

.button {
  font-size: 1em;
  letter-spacing: .03em;
  color: #fff;
  background-color: $black;
  padding: .7em 2em;
  border: 2px solid $black;
  display: inline-block;
  margin: 0; 
  transition: all 0.3s;
  &:hover {
    cursor: pointer;
    background: $brand;
    border: 2px solid $brand;
  }
}

:-webkit-input-placeholder { color: $light-gray; } /* WebKit browsers */ 
:-moz-placeholder { color: $light-gray; } /* Mozilla Firefox 4 to 18 */
::-moz-placeholder { color: $light-gray; } /* Mozilla Firefox 19+ */
:-ms-input-placeholder { color: $light-gray; } /* Internet Explorer 10+ */

@media (max-width: 768px) { /* positions input field and button underneath each other with 100% width for tablet and mobile */
  
.mc-field-group {
  display: block;
}

#mce-EMAIL { padding: .7em 0 .7em 1em; width: 96%; margin: 0; }
.clear { display: block; width: 100% }
.button { width: 96%; margin: .5em 0 0 0; }
  
}

.roles {
  color: $light-gray;
  font-weight: 600;
}


.hover-link {
  color: inherit;
  box-shadow: $brand 0 -3px 0 inset;
  display: inline-block;
  font-weight: 700;
  padding: 2px 3px;
  text-decoration: none currentcolor solid;
  text-decoration-thickness: auto;
  transition: all .2s ease-in-out;
  &:hover {
    color: #fff;
    box-shadow: $brand 0 -55px 0 0 inset;
  }
}

